[tool.poetry]
name = "hokonui"
version = "0.1.0"
description = "hokonui is a library for cross-exchange reading of account info (balances, transactions, coins)"
authors = ["laise <villa.straylite@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
requests-futures = "^1.0.1"

[tool.black]
line-length = 150
target-version = ['py38']

[tool.isort]
profile = "hug"
src_paths = ["hokonui"]
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
